# seal-mail

./: .gitattributes  HANDOFF.md  README.md  README.zh-CN.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release-verify.yml  release.yml
docs/: ai-testing-methodology.md  ci-testing.md  core-cli-gui-architecture.html  product-philosophy.md  user-scenarios.md
docs/ai-evaluation/: README.md  attachment-handling.packet.md  draft-recovery.packet.md  inbox-daily-use.packet.md  organize-mail.packet.md  read-mail-experience.packet.md  rubric.md  schema.json  send-mail-experience.packet.md
landing/: wrangler.jsonc
landing/public/: index.html
scripts/: ai-eval-packet.mjs  ai-eval-runner.mjs  architecture-guard.mjs  collect-ai-evidence.mjs  collect-gui-experience-evidence.mjs  functional-completeness-guard.mjs  prepare-cli-sidecar.mjs
src/: App.tsx  api.sync.test.ts  api.ts  demo.ts  errors.test.ts  errors.ts  i18n.en.ts  i18n.tsx  latestRequest.test.ts  latestRequest.ts  mailCategory.ts  main.tsx  mutf7.test.ts  mutf7.ts  styles.css  styles.test.ts  theme.ts  trust.ts  types.ts  updater.ts  url.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: notify_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  core.rs  crypto.rs  db.rs  filters.rs  i18n.rs  imap_client.rs  ledger.rs  lib.rs  logging.rs  mac_notify.rs  mail.rs  main.rs  models.rs  oauth.rs  pop3_client.rs  secrets_store.rs  smtp_client.rs  store.rs  sync_lock.rs  updater.rs  watcher.rs
src-tauri/tests/: cli_contract.rs  core.rs  core_store.rs  mail_server_smoke.rs
src/components/: AccountModal.tsx  AddrInput.tsx  AppIcon.tsx  ComposeModal.tsx  DraftsPane.tsx  FiltersModal.tsx  HtmlBody.test.ts  HtmlBody.tsx  KeysView.tsx  LedgerBindModal.tsx  MailList.test.tsx  MailList.tsx  MessageView.tsx  Onboarding.tsx  ProfileSlideOver.tsx  RiskModal.tsx  Seal.tsx  SendCountdownDialog.test.tsx  SendCountdownDialog.tsx  Sidebar.test.tsx  Sidebar.tsx  TextBody.tsx  VerifyRail.tsx
