[package]
name = "sealmail"
version = "0.1.1"
description = "SealMail 信印 — 可信邮件客户端"
authors = ["SealMail"]
edition = "2021"

[lib]
name = "sealmail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
# 自动升级失败时回退 GitHub API 手动检测用
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mail protocols
imap = "2.4"
native-tls = "0.2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "native-tls", "pool", "hostname"] }
mail-parser = "0.11"
mail-builder = "0.4"
encoding_rs = "0.8"

# crypto / signing
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
getrandom = "0.2"
# Ledger (secp256k1 EIP-191 personal_sign) 验证侧：ecrecover + keccak256
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
# Ledger 硬件通信走 USB-HID（WKWebView 无 WebHID，只能从 Rust 侧直连设备）。
# 默认特性在 macOS 用 IOKit 构建内置 C hidapi，无需系统库。
hidapi = "2"

chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
ed25519-dalek = "2"
mail-builder = "0.4"
